# cijs

./: CMakeLists.txt  Makefile  README.md
include/: ast.h  lexer.h  tokenizer.h
src/: ast.c  lexer.c  main.c  tokenizer.c
test/: test_runner.c  test_tokenizer.c
